k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-server
  namespace: default

spec:
  replicas: 1

  selector:
    matchLabels:
      app: server-app

  template:
    metadata:
      labels: # Todas las etiquetas son privadas, por la falta de prefijo.
        app: server-app
        tier: server-app

    spec:
      containers:
      - name: server-app
        image: leoduville5/server-app:v13
        imagePullPolicy: Always
        # resources:
        #   requests:
        #     memory: "100Mi"
        #     cpu: "250m"
        #   limits:
        #     memory: "2048Mi"
        #     cpu: "1000m"
      tolerations:
      - key: instance_type
        operator: Equal
        value: spot
        effect: NoSchedule

      affinity:
        # El siguiente código permite que el pod sea desplegado en un nodo matcheado por 'matchExpressions'.
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: team
                operator: In
                values:
                - devops
