k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-app
spec:
  type: ClusterIP
  selector:
    app: server-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
 #   name: http
